# plotnine-mcp

./: .gitignore  CHANGELOG.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_REFERENCE.md  LICENSE  README.md  pyproject.toml  test_basic.py  test_new_features.py  test_phase2_phase3.py
examples/: sample_data.csv  usage_examples.md
src/plotnine_mcp/: __init__.py  data_loader.py  error_utils.py  palettes.py  plot_builder.py  schemas.py  server.py  templates.py  transforms.py
